Edit redesigned jumbotron

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -293,6 +293,32 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "493b1041": {
+          "id": "493b1041",
+          "path": "images/materialtasks-logo.png",
+          "output": "images/materialtasks-logo.png",
+          "name": "materialtasks-logo.png",
+          "category": "IMAGE",
+          "size": 41949,
+          "type": "png",
+          "initialSize": 41949,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "eaa3fc78": {
+          "id": "eaa3fc78",
+          "path": "images/Material Tasks promo.png",
+          "output": "images/Material Tasks promo.png",
+          "name": "Material Tasks promo.png",
+          "category": "IMAGE",
+          "size": 188160,
+          "type": "png",
+          "initialSize": 188160,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
